src/test/ui/infinite/infinite-recursion-const-fn.stderr
error[E0391]: cycle detected when const-evaluating `a`
  --> $DIR/infinite-recursion-const-fn.rs:3:25
   |
LL | const fn a() -> usize { b() }
   |                         ^^^
   |
note: ...which requires const-evaluating `b`...
  --> $DIR/infinite-recursion-const-fn.rs:4:25
   |
LL | const fn b() -> usize { a() }
   |                         ^^^
   = note: ...which again requires const-evaluating `a`, completing the cycle
note: cycle used when const-evaluating `ARR::{{constant}}#0`
  --> $DIR/infinite-recursion-const-fn.rs:5:18
   |
LL | const ARR: [i32; a()] = [5; 6];
   |                  ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
